--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,7 @@
    <p> Este juego te invita a salir de casa e ir en la búsqueda de pokemons!!
     completa tu Pokedex y combate con otros jugadores en la liga de combates Go!</p>
 
-    <p>  Nosotras de ayudaremos mostrándote las características de cada pokemon de Kanto y Johto, 
-    además tenemos un mapa donde te indicamos que pokemon puedes encontrar con mayor probabilidad
-    en cada zona geográfica. </p>
-    <img id ="oak" src="/extra/profesorOak.webp" width="40%" /> 
+    <p>  Nosotras te ayudaremos mostrándote las características de cada pokemon de Kanto y Johto, ademas pueden encontar un ranking con los pokemons con mayor y menor spawn</p>
   </div>
 
   <div id="carrusel"> 
@@ -70,7 +67,7 @@
 
 <!--Sección de pokedex-->
   <section id="pokedexSecction"> 
-  <h3> Selecciona el tipo de Pokémon que necesitas, si quieres verlos todos oprime la pokebola</h3>
+  <h3> Aquí puedes seleccionar los pokemons por tipo, si quieres verlos todos oprime la pokebola.</h3>
     <div id = "filterType">
       <img id ="allTypes" src="./extra/allTypes.png" alt="logo todos los tipos de pokemon" /> 
       <img id = "typeNormal" src="./extra/type_normal.png" alt="logo tipo normal" /> 
@@ -106,9 +103,18 @@
 
   </section>
 
-
-  <section id="mapSecction"> 
-      <p> "hoooooooooooola"</p>
+  <section id="extraSecction">
+    <!--Lista de Spawn-->
+    <div class="contenedor-principal">
+      
+      <div class="min-container">Ranking pokemons con mayor spawn, puedes encontrarlos facilmente en modo salveje</div>  
+      <div class="max-container">Ranking pokemons con menor spawn, estos puedes encontrarlos en RAID o misiones especiales</div>
+    </div>
+    <div class="contenedor-btn">
+      <button id="btnMax">Mayor Spawn</button>
+      <button id="btnMin">Menor Spawn</button>
+    </div>
+  <div id = "mostrarPokeSpawn"> </div>
   </section>
 
 
