--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </audio>
 
   <!--Titulo -->
-  <center> <img src="extra/pikachu-running.gif" width=" 10%" /> <img src="extra/poGoLogo2.png" width="25%" /><img src="extra/pikachu-running.gif" width=" 10%" /> </center>
+  <center> <img src="extra/poGoLogo2.png" width="25%" /> </center>
 
 </header>
 <!--Barra de menú-->
@@ -28,7 +28,6 @@
     <div id="menu">
       <button id="buttonHome">Home</button>
       <button id="buttonPokedex"> Pokedex</button>
-      <button id="buttonMap"> Mapa</button>
       <button id="buttonExtra"> Noticias</button>
     </div>
   
@@ -45,22 +44,6 @@
     <p>  Nosotras te ayudaremos mostrándote las características de cada pokemon de Kanto y Johto, ademas pueden encontar un ranking con los pokemons con mayor y menor spawn</p>
   </div>
 
-  <div id="carrusel"> 
-  <div class="swiffy-slider">    
-    <ul class="slider-container">
-     
-    <li><img class="slider-item" style="max-width: 100%;height: auto;" src="./extra/noticia1.png" alt="¡Perfecciona tus habilidades en el evento Objetivo de Captura!" ></img></li>
-    <li><img class="slider-item" style="max-width: 100%;height: auto;" src="./extra/noticia2.png" alt="Día de la Comunidad de marzo de 2023: Slowpoke y Slowpoke de Galar" ></img></li>
-    <li><img class="slider-item" style="max-width: 100%;height: auto;" src="./extra/noticia3.png" alt="Actualización sobre la Liga Combates GO: Rising Heroes" ></img></li>
-  </ul>
-  <button type="button" class="slider-nav"></button>
-  <button type="button" class="slider-nav slider-nav-next"></button>
-
-  <div class="slider-indicators">
-      <button class="active"></button>
-      <button></button>
-      <button></button>
-  </div>
 </div>
   </div>
   </section>
@@ -101,6 +84,7 @@
     
     </div>
 
+  
   </section>
 
   <section id="extraSecction">
